# Paper-ptz-subpix-accuracy

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.py
cmake/: compiler-flags.cmake
executables/: base_ptcee_mc.cpp  multi_level_ba_mc.cpp  soft_ptcee_mc.cpp
include/mc-analysis/: argparse.h  cal_f.h  figure8_circle_path.h  generate_config.h  multi_level_ba_estimator.h  pt_path.h  simulation.h  triple_cosine_path.h  unit_projection_factor.h  utils.h
python/: generate-plots.py  multi-level-ba-plot.py  multi-level-ba-tables.py  plotting.py  print-tables.py  reader.py  stats.py
src/: argparse.cpp  figure8_circle_path.cpp  generate_config.cpp  multi_level_ba_estimator.cpp  pt_path.cpp  simulation.cpp  triple_cosine_path.cpp  unit_projection_factor.cpp  utils.cpp
